<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/test"
        tools:context=".app.ui.SubmissionFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!--<com.google.android.material.appbar.AppBarLayout
                android:id="@+id/app_bar_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    app:navigationIcon="@drawable/ic_arrow_back"/>

            </com.google.android.material.appbar.AppBarLayout>-->

            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="25dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_backspace"
                app:layout_constraintBottom_toTopOf="@id/first_name_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.2" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/first_name_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/first_name_hint"
                android:padding="5dp"
                android:paddingStart="@dimen/app_padding"
                android:paddingEnd="5dp"
                app:errorEnabled="true"
                app:hintEnabled="true"
                app:layout_constraintBottom_toTopOf="@id/email_text"
                app:layout_constraintEnd_toStartOf="@id/last_name_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5"
                app:layout_constraintVertical_chainStyle="packed">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName|textAutoComplete" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/last_name_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/last_name_text"
                android:padding="5dp"
                android:paddingStart="5dp"
                android:paddingEnd="@dimen/app_padding"
                app:errorEnabled="true"
                app:hintEnabled="true"
                app:layout_constraintBottom_toBottomOf="@id/first_name_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/first_name_text"
                app:layout_constraintTop_toTopOf="@id/first_name_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName|textAutoComplete" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/email_address_hint"
                android:padding="5dp"
                android:paddingStart="@dimen/app_padding"
                android:paddingEnd="@dimen/app_padding"
                app:errorEnabled="true"
                app:hintEnabled="true"
                app:layout_constraintBottom_toTopOf="@id/git_link_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/first_name_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress|textAutoComplete" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/git_link_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/github_link_text"
                android:padding="5dp"
                android:paddingStart="@dimen/app_padding"
                android:paddingEnd="@dimen/app_padding"
                app:errorEnabled="true"
                app:hintEnabled="true"
                app:layout_constraintBottom_toTopOf="@id/submit_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/email_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress|textAutoComplete" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/submit_button"
                style="@style/Widget.MyTheme.SubmitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/button_margin_top"
                android:paddingStart="@dimen/button_padding_start"
                android:paddingEnd="@dimen/button_padding_end"
                android:text="@string/submit_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/git_link_text" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>